<resources>
    <string name="app_name">PearGreenDAO</string>
    <string name="delete">删除所有</string>
    <string name="search">搜索</string>
    <string name="searchall">搜索所有</string>
    <string name="insert">插入</string>
    <string name="key">key</string>
    <string name="value">value</string>
    <string name="key_value">key/value</string>
    <string name="item">长按删除单条Item</string>
    <string name="_1">插入数量，不填默认为1</string>
</resources>
